# pydanticai-mult-agentes

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  financeiro.py  orchestrator.py  tecnico.py  vendas.py
backend/app/guardrails/: __init__.py
backend/app/models/: db.py  schemas.py
backend/app/observability/: logfire_setup.py
backend/app/rag/: embeddings.py  retriever.py
backend/app/routes/: chat.py
backend/app/services/: database.py  session.py
backend/app/tools/: catalogo.py  faturas.py  pedidos.py
backend/tests/: conftest.py  test_agentes.py
docs/demo/: README.md
frontend/: Dockerfile  requirements.txt  streamlit_app.py
scripts/: init_db.sql  seed_data.py
